# esp32s3-iot-sdk

./: .clang-format  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
.github/workflows/: build.yml
embed-web/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
embed-web/plugins/: vite-plugin-bundle-size.ts  vite-plugin-precompress.ts
embed-web/scripts/: prerender.js
embed-web/src/: App.svelte  app.css  main.ts  vite-env.d.ts
embed-web/src/components/: BottomNav.svelte  DialogHost.svelte  NavBar.svelte  ToastHost.svelte  WifiScanModal.svelte
embed-web/src/lib/: BottomNav.svelte  feedback.svelte.ts  route-manifest.ts  router.svelte.ts  theme.svelte.ts
embed-web/src/pages/: Dashboard.svelte  Home.svelte  Settings.svelte  dashboard.svelte  home.svelte  settings.svelte  wifi.svelte
main/: CMakeLists.txt  app_config.h  app_main.c  app_state.c  app_state.h  button_monitor.c  button_monitor.h  device_info.c  device_info.h  dns_captive.c  dns_captive.h  firmware_version.h  firmware_version.h.in  idf_component.yml  status_led.c  status_led.h  storage_fs.c  storage_fs.h  web_server.c  web_server.h  wifi_config_store.c  wifi_config_store.h  wifi_manager.c  wifi_manager.h
